changed ignor list

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /HServer/HServer/obj
 /HServer/HServer/bin
 /HServer/HServer/HServer.csproj.user
+/hserver/HServer.v11.suo
+/hserver/HServer.v12.suo
+/AppHarbor.v12.suo
